[package]
name = "ulang"
version = "0.1.0"
authors = ["Sian Cao <yinshuiboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
logos-derive = "0.12"
actix-web = "3"
lalrpop-util = "0.19"
regex = "1"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19"

