[package]
name = "ulang"
version = "0.1.0"
authors = ["Sian Cao <yinshuiboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
logos-derive = "0.12"
actix-web = "3"
lalrpop-util = "0.19"
regex = "1"
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm7-0"] }
inkwell = { git = "https://github.com.cnpmjs.org/TheDan64/inkwell", branch = "master", features = ["llvm7-0"] }
structopt = "0.3"


[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19"

